made student class and generic rep
